# HoneyBadgerSwap

./: .gitignore  .gitmodules  Dockerfile  Makefile  OPS.md  README.md  aws.yml  contract.Dockerfile  deploy-contract.yml  docker-compose-dev.yml  docker-compose-testnet.yml  docker-compose.yml  go.mod  go.sum  hbswap.Dockerfile  liquidity-provider.yml  setup.Dockerfile  trader.yml
.github/workflows/: build.yml  ci.yml
HoneyBadgerSwap/: Makefile  contract.Dockerfile  docker-compose.yml  hbswap.yml  liquidity-provider.yml  mpc-setup.yml  trader.yml
HoneyBadgerSwap/contracts/: FlattenedHbSwap.sol  HbSwap.sol
HoneyBadgerSwap/genfiles/: HbSwap.abi  Token.abi
HoneyBadgerSwap/go/client/: deposit.go  (+7 more)
HoneyBadgerSwap/python/: Client.py  Server.py  hbswap_client.py  org_data.py  req_inputmasks.py  server_org_file.py  set_data.py  utils.py
HoneyBadgerSwap/scripts/: chain-latest.sh  gen.sh  init-pool.sh  mpc-node.sh  prep.sh  run.sh  trade-2.sh
HoneyBadgerSwap/src/: package-lock.json
conf/: client.toml  client_aws.toml  config.toml  server-kovan.toml  server.toml
docker/: README.md  dev.Dockerfile  ethdevnode.Dockerfile  goeth.Dockerfile  hbswapmpcbytecodes.Dockerfile  mpcbytecodes.Dockerfile  mpspdzbuilds.Dockerfile  mpspdzsetupssl.Dockerfile  openssl.Dockerfile
docker/aws/: Dockerfile  compose.yml  server.toml
front-end/: webpage.css  webpage.html  webpage.js
poa/: genesis.json
ratel/: colAuctoin.md  hbswap - zkp.md  hbswap-3-players.md  hbswap.md  rock-paper-scissors.md  trade.rl  volumeMatching.rl
ratel/src/: compile.sh  deploy.sh  run.sh  truffle-config.js  utils.sh
ratel/src/zkrp_pyo3/: Cargo.toml  README.md  pyproject.toml
ratel/src/zkrp_pyo3/src/: lib.rs
scripts/: beep.py  chain-latest.sh  chain.sh  client-public-deposit.sh  client-secret-deposit.sh  client.sh  compile.sh  eth-data.sh  follow-sim-logs-with-tmux.sh  gen.sh  generate-keys.sh  init-pool.sh  latency-control.sh  mpc-node-testnet.sh  mpc-node.sh  prep.sh  run.sh  test_hbswap.sh  testnet-mpc-node.sh  trade-1.sh  trade-2.sh  trade.sh  utils.sh
src/: package-lock.json  package.json  truffle-config.js
src/contracts/: FlattenedHbSwap.sol  FlattenedHbSwapToken.sol  HbSwap.sol  HbSwapToken.sol  Token.sol
src/genfiles/: HbSwap.abi  HbSwapToken.abi  Token.abi
src/js/: metamask.js  original.js  webpage.html
src/mpc/: hbswap_add_liquidity.mpc  hbswap_calc_batch_price.mpc  hbswap_calc_individual_price.mpc  hbswap_calc_price.mpc  hbswap_init_pool.mpc  hbswap_remove_liquidity.mpc  hbswap_secret_withdraw.mpc  hbswap_test.mpc  hbswap_trade.mpc
src/python/: .flake8  Makefile  fastapi.yml  setup.cfg
src/python/honeybadgerswap/: utils.py
src/python/honeybadgerswap/client/: Client.py  __init__.py  req_inputmasks.py  req_price.py
src/python/honeybadgerswap/server/: Server.py  __init__.py  add_liquidity_org_data.py  add_liquidity_set_data.py  calc_batch_price_org_data.py  calc_batch_price_set_data.py  calc_individual_price_org_data.py  calc_individual_price_set_data.py  calc_price_org_data.py  calc_price_set_data.py  check_balance_org_data.py  config.py  init_pool.py  init_pool_org_data.py  init_pool_set_data.py  main.py  proc_inputmask.py  remove_liquidity_org_data.py  remove_liquidity_set_data.py  secret_deposit.py  secret_withdraw_org_data.py  secret_withdraw_set_data.py  set_price_zero.py  start_server.py  trade_org_data.py  trade_set_data.py  trade_update_balance.py  update_balance.py
src/python/tests/: check.py  debug.sh  debug_trade.sh  set_data.py  test.py
src/rl/: trade.sol
testkeys/: README.md  genkeys.sh  genkeys.yml
testkeys/public/: 690ad341.0  P0.pem  P1.pem  P2.pem  P3.pem  fe403b7a.0
testkeys/secret/: P0.key  P1.key  P2.key  P3.key
(+215 files in other folders)
