[metadata]
name = honeybadgerswap
version = 0.0.1.dev0

[options]
packages = find:
install_requires =
    aiohttp
    gmpy
    gmpy2
    leveldb
    toml

[options.entry_points]
console_scripts =
    hbswap-check-balance-set-data=honeybadgerswap.server.check_balance_set_data:main
    hbswap-check-balance-org-data=honeybadgerswap.server.check_balance_org_data:main
    hbswap-update-balance=honeybadgerswap.server.update_balance:main
    hbswap-proc-inputmasks=honeybadgerswap.server.proc_inputmask:main
    hbswap-init-pool=honeybadgerswap.server.init_pool:main
    hbswap-add-liquidity-set-data=honeybadgerswap.server.add_liquidity_set_data:main
    hbswap-add-liquidity-org-data=honeybadgerswap.server.add_liquidity_org_data:main
    hbswap-remove-liquidity-set-data=honeybadgerswap.server.remove_liquidity_set_data:main
    hbswap-remove-liquidity-org-data=honeybadgerswap.server.remove_liquidity_org_data:main
    hbswap-trade-set-data=honeybadgerswap.server.trade_set_data:main
    hbswap-trade-org-data=honeybadgerswap.server.trade_org_data:main
    hbswap-calc-price-set-data=honeybadgerswap.server.calc_price_set_data:main
    hbswap-start-server=honeybadgerswap.server.start_server:main
    hbswap-req-inputmasks=honeybadgerswap.client.req_inputmasks:main
