[package]
name = "zkrp_pyo3"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "zkrp_pyo3"
crate-type = ["cdylib"]

[dependencies]
bulletproofs = "4.0.0"
curve25519-dalek-ng = "4.1.1"
merlin = "3.0.0"
pyo3 = { version = "0.16.1", features = ["extension-module"] }
rand = "0.8.5"
serde = "1.0.136"
serde_json = "1.0.79"
